# hobbes

./: .boring  .gitignore  1.commands  1.commands.fibon  2.events  2.events.denali  README  papi-ghc.cabal
ANALYSIS/: fibon.xlsx  nofib-10.xlsx  nofib.papiex.xlsx  nofib.xlsx  spec.xlsx
ANALYSIS/OLD/: 10.nofib  100.nofib
ANALYSIS/R/: Commands.txt  plot.R
RESULTS/: nofib.papiex.10.xml
analyze/dr/: pcprofile.rb
analyze/dr-traces/dynamorio/: LICENSE  dynamorio.cabal
analyze/dr-traces/dynamorio/exe/: Main.hs
analyze/dr-traces/dynamorio/lib/Data/Elf/: Symtab.hs
analyze/dr-traces/dynamorio/lib/DynamoRIO/: ParserHelp.hs  PcSample.hs  PcSampleParser.hs  Trace.hs  TraceDumpParser.hs  TraceOriginParser.hs
analyze/imgmix/: imgmix.py
analyze/mix/: Papicodes.hs  Svm.hs  all.plot2  label.pl
analyze/svm-prediction/: .gitignore  ClusterElement.hs  KMeans.hs  Makefile  OpcodeGroup.hs  Opcodes.txt  mkOpCodes.pl  pinalyze.cabal  programClass.pl
analyze/svm-prediction/Statistics/: Descriptive.pm
analyze/svm-prediction/pinalyze-src/: PapiMix.hs  RegMix.hs  Regcodes.hs  Util.hs
dph-pin/: dph.commands
find-nofib-commands/: findCommands.pl
nofib-pin/: findCommands.pl  nofib.commands  runPin.pl
nofibpar-pin/: nofibpar-viaC.commands  nofibpar.commands
pin-analyze/: Cluster.hs  ClusterElement.hs  GnuPlot.hs  JumpMix.hs  Jumpcodes.hs  KMeans.hs  Main.hs  Makefile  OpcodeGroup.hs  OpcodeMix.hs  OpcodeType.hs  OpcodeTypeMix.hs  Opcodes.hs  Opcodes.txt  Papicodes.hs  PinData.hs  Pinalyze.hs  Svm.hs  Util.hs  accuracyPlot.rb  chooseTrainingSets.pl  label.pl  llvm.plot2  loop.pl  prep.pl  programClass.pl  rPlot.rb  rPlot2.rb  runKmeans.pl  runTraining.pl  split.pl  trainModel.pl
pin-run/: checkResults.rb  loop.pl  runPapi.rb  runPin.pl
shootout-pin/: shootout.commands  shootout.ghc-llvm.commands  shootout.ghc-viaC.commands
spec2006-pin/: findCommands.pl  spec.commands  spec.icc.commands
src/: Analysis.hs  Command.hs  Formula.hs  GhcStatsParser.hs  Main_PapiAnalyze.hs  Main_PapiCollect.hs  PapiPresetEvent.hs  PhaseData.hs  StatsFile.hs
(+94 files in other folders)
